<resources>
    <string name="app_name">RemindMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">Test</string>

    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">Face Recognition</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="date_time_reminder">Date Time Reminder</string>
    <string name="apply">Apply</string>
    <string name="type_the_profile_of_the_person">Type the profile of the person...</string>
    <string name="name">Name</string>
    <string name="add_face">Add Face</string>
</resources>