<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddFaceContainer"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_search">

    <ImageView
        android:id="@+id/faceAddFace"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_add_face"
        app:tint="@color/white_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/buntu_bold"
        android:includeFontPadding="false"
        android:text="@string/add_face"
        android:textColor="@color/white_700"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/faceAddFace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/faceAddFace"
        app:layout_constraintTop_toTopOf="@id/faceAddFace"/>

    <EditText
        android:id="@+id/textFaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/buntu_regular"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:hint="@string/name"
        android:textColorHint="@color/white_500"
        android:textColor="@color/white_700"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/faceAddFace"/>


    <EditText
        android:id="@+id/textFaceProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@null"
        android:fontFamily="@font/buntu_regular"
        android:gravity="top"
        android:hint="@string/type_the_profile_of_the_person"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:textColor="@color/white_700"
        android:textColorHint="@color/white_500"
        android:textSize="@dimen/_13ssp"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/_100sdp"
        app:layout_constraintTop_toBottomOf="@id/textFaceName"/>

    <TextView
        android:id="@+id/faceAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/buntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add_face"
        android:textAllCaps="true"
        android:textColor="@color/yellow_700"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFaceProfile"/>

    <TextView
        android:id="@+id/faceCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/buntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/red_500"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/faceAdd"
        app:layout_constraintTop_toBottomOf="@id/textFaceProfile"/>

</androidx.constraintlayout.widget.ConstraintLayout>