<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutSelectDateTimeContainer"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_search">

    <ImageView
        android:id="@+id/imageDateTimeReminder"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_notifications"
        app:tint="@color/white_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/buntu_bold"
        android:includeFontPadding="false"
        android:text="@string/date_time_reminder"
        android:textColor="@color/white_700"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageDateTimeReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDateTimeReminder"
        app:layout_constraintTop_toTopOf="@id/imageDateTimeReminder"/>

    <TextView
        android:id="@+id/textDateReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/buntu_regular"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="Select Date"
        android:textColor="@color/white_700"
        android:textSize="@dimen/_15ssp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/imageDateTimeReminder"/>

    <TextView
        android:id="@+id/textTimeReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/buntu_regular"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="Select Time"
        android:textColor="@color/white_700"
        android:textSize="@dimen/_15ssp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/textDateReminder"/>

    <TextView
        android:id="@+id/textApplyReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/buntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/apply"
        android:textAllCaps="true"
        android:textColor="@color/yellow_700"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTimeReminder"/>

    <TextView
        android:id="@+id/textCancelReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/buntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/red_500"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textApplyReminder"
        app:layout_constraintTop_toBottomOf="@id/textTimeReminder"/>

</androidx.constraintlayout.widget.ConstraintLayout>