<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground"
    tools:context=".Activities.CreateNoteActivity">

    <ScrollView
        android:id="@+id/editScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/editImageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="Back"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white_700" />

            <ImageView
                android:id="@+id/editImageSave"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="Done"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/editImageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editImageBack"
                app:tint="@color/white_700" />

            <EditText
                android:id="@+id/editNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/buntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white_700"
                android:textColorHint="@color/white_500"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/editImageBack" />

            <TextView
                android:id="@+id/editNoteDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/buntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white_700"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/editNoteTitle"
                app:layout_constraintStart_toStartOf="@id/editNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/editNoteTitle" />

            <TextView
                android:id="@+id/editNoteNoteUid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/buntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white_700"
                android:textSize="@dimen/_10ssp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/editNoteTitle"
                app:layout_constraintStart_toStartOf="@id/editNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/editNoteTitle" />

            <TextView
                android:id="@+id/editNoteUid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/buntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white_700"
                android:textSize="@dimen/_10ssp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/editNoteTitle"
                app:layout_constraintStart_toStartOf="@id/editNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/editNoteTitle" />

            <EditText
                android:id="@+id/editNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/buntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/white_700"
                android:textColorHint="@color/white_500"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/editViewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/editNoteDateTime" />

            <View
                android:id="@+id/editViewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/editNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editNoteSubtitle" />

            <ImageView
                android:id="@+id/editNoteImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="gone"
                app:layout_constraintTop_toBottomOf="@id/editNoteSubtitle"/>

            <ImageView
                android:id="@+id/editNoteRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white_700"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/editNoteImage"
                app:layout_constraintTop_toTopOf="@id/editNoteImage"/>

            <EditText
                android:id="@+id/editNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/buntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/white_700"
                android:textColorHint="@color/white_500"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editNoteImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_note_bottom_nav"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>